change to chen's firebase account

--- a/.env
+++ b/.env
@@ -6,11 +6,13 @@ HOST_URL=http://localhost:5000
 
 #firebase database config
 
-API_KEY=AIzaSyAzvE1_Q1YFYLw_4wognMYBPLdLiWNKk7w
-AUTH_DOMAIN=dsci551-4b349.firebaseapp.com
-DATABASE_URL=https://dsci551-4b349-default-rtdb.firebaseio.com
-PROJECT_ID=dsci551-4b349
-STORAGE_BUCKET=dsci551-4b349.appspot.com
-MESSAGING_SENDER_ID=384009302340
-APP_ID=1:384009302340:web:adf167ab70426bd6e42711
-MEASUREMENT_ID=G-MFYTFLXM0V
+API_KEY=AIzaSyDDb1qB-kDmNjgsqbm438GYq18V_LJkM-M
+AUTH_DOMAIN=dsci551-project-e5ce9.firebaseapp.com
+DATABASE_URL=https://dsci551-project-e5ce9-default-rtdb.firebaseio.com
+PROJECT_ID=dsci551-project-e5ce9
+STORAGE_BUCKET=dsci551-project-e5ce9.appspot.com
+MESSAGING_SENDER_ID=152329774186
+APP_ID=1:152329774186:web:4e49b392bdde0191699613
+MEASUREMENT_ID=G-D8374YFR2J
+
+COLLECTION=House
