--- a/.env
+++ b/.env
@@ -1,12 +1,22 @@
 #express server config
-
 PORT=5000
 HOST=localhost
 HOST_URL=http://localhost:5000
 
+#mongoDB config
+MONGO_URL=mongodb+srv://luxunzhe:003773@cluster0.6y9fy.mongodb.net/la_rental?retryWrites=true&w=majority
+
+# GeoCoding config
+GEOCODING_PROVIDER=mapquest
+API_KEY=pju0DtJbrW3VQ6606AKTqGZG8Yrn3ux8
+
+
+
+
+
 #firebase database config
 
-API_KEY=AIzaSyDDb1qB-kDmNjgsqbm438GYq18V_LJkM-M
+#API_KEY=AIzaSyDDb1qB-kDmNjgsqbm438GYq18V_LJkM-M
 AUTH_DOMAIN=dsci551-project-e5ce9.firebaseapp.com
 DATABASE_URL=https://dsci551-project-e5ce9-default-rtdb.firebaseio.com
 PROJECT_ID=dsci551-project-e5ce9
