--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# running env
+NODE_ENV=development
+
 #express server config
 PORT=5000
 HOST=localhost
@@ -10,7 +13,8 @@ MONGO_URL=mongodb+srv://luxunzhe:003773@cluster0.6y9fy.mongodb.net/la_rental?ret
 GEOCODING_PROVIDER=mapquest
 API_KEY=pju0DtJbrW3VQ6606AKTqGZG8Yrn3ux8
 
-
+# JWT secret
+JWT_SECRET=003773
 
 
 
