--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "again": "0.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "^9.6.10",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
     "node-geocoder": "^4.0.0"
   },
