--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-spring": "^9.4.4",
     "styled-components": "^5.3.5"
   },
   "scripts": {
