--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
@@ -20,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "react-spring": "^9.4.4",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.5"
   },
   "scripts": {
