--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ API_KEY=pju0DtJbrW3VQ6606AKTqGZG8Yrn3ux8
 # JWT secret
 JWT_SECRET=003773
 
+# Salt for brypt password
+BCRYPT_SALT=10
+
 
 
 #firebase database config
