--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "firebase": "^9.6.10",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "mongoose-delete": "^0.5.4",
+    "mongoose-paginate-v2": "^1.6.3",
     "node-geocoder": "^4.0.0"
   },
   "devDependencies": {
