--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # running env
-NODE_ENV=development
+NODE_ENV=production
 
 #express server config
 PORT=5000
@@ -18,18 +18,3 @@ JWT_SECRET=003773
 
 # Salt for brypt password
 BCRYPT_SALT=10
-
-
-
-#firebase database config
-
-#API_KEY=AIzaSyDDb1qB-kDmNjgsqbm438GYq18V_LJkM-M
-AUTH_DOMAIN=dsci551-project-e5ce9.firebaseapp.com
-DATABASE_URL=https://dsci551-project-e5ce9-default-rtdb.firebaseio.com
-PROJECT_ID=dsci551-project-e5ce9
-STORAGE_BUCKET=dsci551-project-e5ce9.appspot.com
-MESSAGING_SENDER_ID=152329774186
-APP_ID=1:152329774186:web:4e49b392bdde0191699613
-MEASUREMENT_ID=G-D8374YFR2J
-
-COLLECTION=House
